--- a/ruby/sinatra-neography/views/index.erb
+++ b/ruby/sinatra-neography/views/index.erb
@@ -12,7 +12,7 @@
 
   <p>The text below is from Neo4j:</p>
   <div id="generated">
-    <%= @row[0][:data][:name] %> <%= @row[1][:type] %> <%= @row[2][:data][:name] %>
+    <%= @row[0]['data']['name'] %> <%= @row[1]['type'] %> <%= @row[2]['data']['name'] %>
   </div>
   <hr/>
   <h2>Cypher query</h2>
